objects/mcdm_15__DM_Auto_Send__c.object
<CustomObject>
    <fields>
        <fullName>mcdm_15__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>DM Auto Send</relationshipLabel>
        <relationshipName>DM_Auto_Send</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__CustomPluginData__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <label>Custom Plugin Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__External_Journey_Id__c</fullName>
        <label>External Journey Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Friendly_Error__c</fullName>
        <description>A friendly error is shown to the standard user in this field, if something went wrong with the chunk processing overall and not at the individual member level.</description>
        <label>Friendly Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Greeting__c</fullName>
        <label>Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Has_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Linked_Business_Unit_Id__c</fullName>
        <label>Linked Business Unit Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Mobile_Custom_Field_Contact__c</fullName>
        <description>Custom field for mobile phone for Contact</description>
        <label>Mobile Custom Field for Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Mobile_Custom_Field_Lead__c</fullName>
        <description>Custom field for mobile phone for Lead</description>
        <label>Mobile Custom Field for Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Queueable_Job_Id__c</fullName>
        <description>Queueable apex job ID</description>
        <label>Queueable Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Send_From__c</fullName>
        <description>Send from mapping for use in the send</description>
        <label>Send From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Send_Time__c</fullName>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Status_Formula__c</fullName>
        <description>Shows the translated status for the DM Auto Send</description>
        <formula>CASE(mcdm_15__Status__c, &apos;Waiting&apos;, $Label.mcdm_15__csvjobstatuswaiting, &apos;Sending&apos;, $Label.mcdm_15__csvjobstatussending ,&apos;Completed&apos;, $Label.mcdm_15__csvjobstatuscompleted, &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Total_Members_Processed__c</fullName>
        <description>Total members processed on this auto send job</description>
        <label># Members Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DM Auto Send</label>
    <listViews>
        <fullName>mcdm_15__All_DM_Auto_Sends</fullName>
        <columns>NAME</columns>
        <columns>mcdm_15__Send_Time__c</columns>
        <columns>mcdm_15__Status_Formula__c</columns>
        <columns>mcdm_15__Has_Errors__c</columns>
        <columns>mcdm_15__Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DM Auto Sends</label>
    </listViews>
    <nameField>
        <displayFormat>DMA-{0000000}</displayFormat>
        <label>DM Auto Send Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Auto Sends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>